Support a joint hierarchy with other node types

Original implementation assumes a joint hierarchy should be implemented
with only 'Joint' type. But it can be linked with other node and managed
with something like 'Loader3D'.

Fixes: QTBUG-89372
Change-Id: I0f8f0520f00d90390495e3de523c33baf3531696
Reviewed-by: Antti Määttä <antti.maatta@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Andy Nichols <andy.nichols@qt.io>
(cherry picked from commit 803efea45cec0c65f502cf9cd46d758856f4ad4a)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>