src/runtimerender/rendererimpl/qssgrendererimpllayerrenderpreparationdata.cpp
@@ -52,16 +52,17 @@ QT_BEGIN_NAMESPACE
 
 static void collectBoneTransforms(QSSGRenderNode *node, QSSGRenderModel *modelNode, const QVector<QMatrix4x4> &poses)
 {
-    QSSGRenderJoint *jointNode = static_cast<QSSGRenderJoint *>(node);
-    jointNode->calculateGlobalVariables();
-    QMatrix4x4 M = jointNode->globalTransform;
-    // if user doesn't give the inverseBindPose, identity matrixes are used.
-    if (poses.size() > jointNode->index)
-        M *= poses[jointNode->index];
-    modelNode->boneTransforms[jointNode->index] = M;
-    QMatrix3x3 N = mat44::getUpper3x3(M);
-    modelNode->boneNormalTransforms[jointNode->index] = mat33::getInverse(N).transposed();
-
+    if (node->type == QSSGRenderGraphObject::Type::Joint) {
+        QSSGRenderJoint *jointNode = static_cast<QSSGRenderJoint *>(node);
+        jointNode->calculateGlobalVariables();
+        QMatrix4x4 M = jointNode->globalTransform;
+        // if user doesn't give the inverseBindPose, identity matrixes are used.
+        if (poses.size() > jointNode->index)
+            M *= poses[jointNode->index];
+        modelNode->boneTransforms[jointNode->index] = M;
+        QMatrix3x3 N = mat44::getUpper3x3(M);
+        modelNode->boneNormalTransforms[jointNode->index] = mat33::getInverse(N).transposed();
+    }
     for (auto &child : node->children)
         collectBoneTransforms(&child, modelNode, poses);
 }
